20-traefik/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: traefik.local
  name: traefik-dash
  namespace: traefik
spec:
  ingressClassName: traefik-internal
  rules:
  - host: traefik.local
    http:
      paths:
      - backend:
          service:
            name: traefik
            port:
              number: 9000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
